# project

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  commit-msg  commit.sh  git_alias_config.sh  gitignore.txt  vimrc
IdeaProjects/MachineLearning/: DecisionTree.py  HierarchicalClustering.py  Kmeans.py  NeuralNetwork.py  ScipyKmeans.py
IdeaProjects/NumpyProj/: test.py
IdeaProjects/PandasProj/: 2048.py  PandasCourse1.py  PandasCourse2.py  PandasCourse3.py  PandasCourse4.py  PandasCourse5.py  los_census.txt
IdeaProjects/crap/: bingScrapy.py  tuchong.py
IdeaProjects/matplotDev/: matplotlibDev1.py
IdeaProjects/stock/stock_dev1/: MA.py  getPrice.py  level2.py  stock.py
IdeaProjects/tensorflow/: convolutional.py
IdeaProjects/tensorflow/logs/: events.out.tfevents.1503233392.LAPTOP-IV9SCMPU  events.out.tfevents.1503233408.LAPTOP-IV9SCMPU  events.out.tfevents.1503233600.LAPTOP-IV9SCMPU
IdeaProjects/test/: test.py
IdeaProjects/testJava/src/: test.java
cpp_project/: README.md
cpp_project/SQL-project/: README.md  exe.sh  sqlite3_t.c  sqlite_t  student
cpp_project/TMP/: templatesTest.cpp  variadicTemplates-4.h
cpp_project/basic-skills/Dining_Philosopher/: Dining_Philosopher.c  diners.c  diners.h  simp_sem.c  simp_sem.h
cpp_project/basic-skills/boost/: main.cpp  test.cpp
cpp_project/basic-skills/child/: child.cpp
cpp_project/basic-skills/int2char/: core.14959  exe.sh  main  main.c  result.txt
cpp_project/basic-skills/memory/: 2Dmalloc.cpp  StackHeapTest.cpp  all_test.sh  argparse_uses_parent.py  mem_cpy.c  mem_test.c  ntoh.c  run_mem_test.sh  search.c  sh  stack-heap.cpp  stack-heap.s  str_ptr.c  test.c  thread1.c
cpp_project/basic-skills/node-demo/: bsharp_tree.c  fsm  fsm.c  fsm.sh  private_date  private_date.cc  private_date.sh  s1  switch_test.c  test  test_size  test_size.c
cpp_project/basic-skills/opt-parse-demo/: core.19660  optlong.c  parse_config.c  t1  test.c
cpp_project/basic-skills/parent/: SConstruct  parent  parent.cpp
cpp_project/basic-skills/stl-demo/: vector-demo  vector-demo.cpp
cpp_project/basic-skills/success-demo/: demo  demo.cpp  sumTwo.h  test  test.cpp
cpp_project/basic-skills/time/: main.c  t1
cpp_project/basic-skills/virtual-demo/: core.17278  main.cpp  t1
cpp_project/bazel_demo/: BUILD  MODULE.bazel  README.md  hello_world.cc
cpp_project/bazel_demo/lib/: BUILD  (+1 more)
cpp_project/c11-project/: ParallelQuickSort.cpp  ThreadDemo.cpp  ThreadPool.cpp  ThreadPool2cpp.cpp  c11_1.cpp  c11_1_5.cpp  c11_2_75.cpp  c11_2_79.cpp  c11_3_104.cpp  condtionVariableDemo.cpp  declType.cpp  findIf.cpp  interruptibleThread.h  joinThreads.h  lockFreeStack.cpp  nonPodCopy.cpp  ptrDemo.cpp  smartPtrDemo.cpp  threadSafeLookUpTable.cpp  threadSafeQueue.h  threadSafeQueueTest.cpp  timeDetail.cpp  unaryAndbinaryFunc.cpp
cpp_project/cachelib-demo/: CMakeLists.txt  README.md  main.cpp
cpp_project/cppcheck/: 1  main.cpp  run.sh  t1  t3  test_return.cpp  test_struct.c
cpp_project/data-structure/: listExercise.cpp  quickSort.cpp  rebuildTree.cpp
cpp_project/demo/: .gitignore  CMakeLists.txt  Makefile  README.md
cpp_project/demo/bazel_demo/: WORKSPACE
cpp_project/demo/bazel_demo/lib/: random.h  timer.c  timer.h
cpp_project/demo/src/: CMakeLists.txt
cpp_project/demo/src/index_load/: CMakeLists.txt  test_index_load.cc
cpp_project/demo/src/nrvo/: CMakeLists.txt  test_nrvo.cc
cpp_project/demo/src/seek_dispatch/: CMakeLists.txt  test_seek_task.cc
cpp_project/demo/src/split_docs/: CMakeLists.txt  test_split_doc.cc
cpp_project/demo/src/test_frame/: CMakeLists.txt  test_frame.cc  value_traits.h
cpp_project/demo/src/util/: lock_free_queue.h
cpp_project/easylog/: .sconsign.dblite  SConstruct  build.sh  make
cpp_project/problem-set/: Algo.md  BackTrackingProblem.cpp  CMakeLists.txt  DynamicProgramming.cpp  DynamicProgramming.h  Frame.cpp  GetMedia.cpp  OperatorLess.cpp  QuickSort.cpp  Solution.h  TPC.cpp  TestCase.h  TradeMachingEngine.cpp  akuna.docx
cpp_project/problem-set/scripts/: gen_con.sh
cpp_project/problem-set/src/: CMakeLists copy.txt  CMakeLists.txt
cpp_project/problem-set/src/app/: CMakeLists.txt  Frame.cpp  TestCase.h
cpp_project/problem-set/src/leetcode/: QuickSort.h  Solution.h
cpp_project/problem-set/src/view/: CMakeLists.txt
cpp_project/problem-set/src/view/algo/: BackTrackingProblem.h  DynamicProgramming.h
cpp_project/problem-set/src/view/basic/: GetMediaNum.h  MallocTest.h  OperatorLess.h  align.md
cpp_project/problem-set/src/view/company/: CMakeLists.txt  TradeMachingEngine.cpp  TradeMachingGithub.cpp
cpp_project/problem-set/src/view/tpc/: CMakeLists.txt  Seat.md  TPC.cpp
cpp_project/problem-set/src/view/util/: IndexManager.h  Timer.h
cpp_project/proto-buffer/: README.md  addressbook.proto
cpp_project/tf_demo/: CMakeLists.txt  README.md  tf_test.cpp
django_project/dj1/: db.sqlite3
django_project/test_mode/: db.sqlite3  manage.py  testdb.py
django_project/testdj/: bak.txt  db.sqlite3
java_project/tree/: tree.java
js_project/inova/: package.json
js_project/node1/: server.js
python_project/python/: DateTime.py  DefHtmlParser.py  ModifyIp.py  MyClass.py  PlayBall.py  SliceUrl.py  VisitFile.py  argparse.py  convolutional.py  foo.py  fun_elif.py  fun_for (2).py  fun_for.py  fun_for.py.bak  fun_for_t1.py  pyplot.py  strFormat.py  time_cmp.py
python_project/tf_project/: convolutional.py
shell_project/: removeShotCut.bat  rename.bat  string.sh  在所有隧道接口上重新启用 IPv6 MicrosoftEasyFix20173.mini.diagcab
(+304 files in other folders)
